prevent bricks pulled by masthead from overlaping the sticky header on z-axis

--- a/docroot/themes/custom/boatshow/sass/components/_01-bricks.scss
+++ b/docroot/themes/custom/boatshow/sass/components/_01-bricks.scss
@@ -257,7 +257,7 @@ $dimension-masthead-vertical-pull: .40 * $dimension-masthead-min-height !default
 
       + .container {
         .brick:first-child {
-          z-index: 9999; // keep next child above the masthead Z
+          z-index: 100; // keep next child above the masthead Z
         }
       }
     }
